--- a/app/web/package.json
+++ b/app/web/package.json
@@ -30,6 +30,7 @@
     "google-protobuf": "^3.19.3",
     "grpc-web": "1.3.1-rc",
     "intersection-observer": "^0.12.0",
+    "luhn": "^2.4.1",
     "maplibre-gl": "^1.15.2",
     "next": "12.0.7",
     "next-i18next": "git+https://github.com/Couchers-org/next-i18next.git#39a50ec9",
@@ -40,6 +41,7 @@
     "react-hook-form": "^6.15.8",
     "react-intersection-observer": "^8.32.5",
     "react-lines-ellipsis": "^0.15.0",
+    "react-phone-number-input": "^3.1.44",
     "react-query": "^3.34.6",
     "seamless-scroll-polyfill": "^2.1.5"
   },
